# gds-text

./: .gitignore  CLAUDE.local.md  Cargo.toml  README.md  flake.nix
scripts/: gds_to_png.py  run_drc.sh  screenshot.sh  sky130_met1.drc
src/: app.rs  bitmap.rs  config.rs  fill.rs  gds_out.rs  layout.rs  main.rs  pdf_out.rs  png_out.rs  text_render.rs
