[package]
name = "gds-text"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Render text snippets to GDSII and PDF with Calibre-style dummy fill"

[dependencies]
egui = "0.33"
eframe = { version = "0.33", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
    "wayland",
    "x11",
] }
cosmic-text = "0.18"
gds21 = "3.0.0-pre.2"
printpdf = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.15"
anyhow = "1"
log = "0.4"
env_logger = "0.11"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
